<resources>
    <string name="app_name">OperacionesBasicas</string>
    <string name="numero_uno">Numero Uno</string>
    <string name="numero_dos">Numero Dos</string>
    <string name="numero_tres">Numero Tres</string>
    <string name="numero_cuatro">Numero Cuatro</string>
    <string name="numero_cinco">Numero Cinco</string>
    <string name="numero_seis">Numero Seis</string>
    <string name="numero_siete">Numero Siete</string>
    <string name="numero_ocho">Numero Ocho</string>
    <string name="numero_nueve">Numero Nueve</string>
    <string name="numero_diez">Numero Diez</string>
    <string name="numero_once">Numero Once</string>
    <string name="numero_doce">Numero Doce</string>
    <string name="numero_trece">Numero Trece</string>
    <string name="numero_14">Numero 14</string>
    <string name="numero_quince">Numero Quince</string>
    <string name="numero_diesciseis">Numero Diesciseis</string>
    <string name="numero_diescisiete">Numero Diescisiete</string>
    <string name="numero_diesciocho">Numero Diesciocho</string>
    <string name="numero_19">Numero 19</string>
    <string name="numero_veinte">Numero Veinte</string>
    <string name="numero_21">Numero Veintiuno</string>
    <string name="numero_22">Numero 22</string>
    <string name="numero_23">Numero 23</string>
    <string name="numero_24">Numero 24</string>
    <string name="numero_25">Numero 25</string>
    <string name="numero_26">Numero 26</string>
    <string name="numero_27">Numero 27</string>
    <string name="numero_28">Numero 28</string>
    <string name="numero_29">Numero 29</string>
    <string name="numero_30">Numero 30</string>
    <string name="numero_31">Numero 31</string>
    <string name="numero_32">Numero 32</string>
    <string name="numero_33">Numero 33</string>
    <string name="numero_34">Numero 34</string>
    <string name="numero_35">Numero 35</string>
    <string name="numero_36">Numero 36</string>
    <string name="numero_37">Numero 37</string>
    <string name="numero_38">Numero 38</string>
    <string name="numero_39">Numero 39</string>
    <string name="numero_40">Numero 40</string>
    <string name="numero_41">Numero 41</string>
    <string name="numero_42">Numero 42</string>
    <string name="numero_43">Numero 43</string>
    <string name="numero_44">Numero 44</string>
    <string name="numero_45">Numero 45</string>
    <string name="numero_46">Numero 46</string>
    <string name="numero_47">Numero 47</string>
    <string name="numero_48">Numero 48</string>
    <string name="numero_49">Numero 49</string>
    <string name="numero_50">Numero 50</string>
    <string name="numero_51">Numero 51</string>
    <string name="numero_52">Numero 52</string>
    <string name="numero_53">Numero 53</string>
    <string name="numero_59">Numero 54</string>
    <string name="numero_54">Numero_54</string>
    <string name="numero_57">Numero 43</string>
    <string name="numero_58">Numero 58</string>
    <string name="numero_60">Numero 60</string>
    <string name="numero_61">Numero 61</string>
    <string name="numero_62">Numero 62</string>
    <string name="numero_63">Numero 63</string>
    <string name="numero_64">Numero 64</string>
    <string name="numero_65">Numero 65</string>
    <string name="numero_66">Numero 66</string>
    <string name="numero_67">Numero 67</string>
    <string name="numero_68">Numero 68</string>
    <string name="numero_69">Numero 69</string>
    <string name="numero_70">Numero 70</string>
    <string name="numero_71">Numero 71</string>
    <string name="numero_72">Numero 72</string>
    <string name="numero_73">Numero 73</string>
    <string name="numero_74">Numero 74</string>
    <string name="numero_75">Numero 75</string>
    <string name="numero_76">Numero 76</string>
    <string name="numero_77">Numero 77</string>
    <string name="numero_78">Numero 78</string>
    <string name="numero_79">Numero 79</string>
    <string name="numero_80">Numero 80</string>
    <string name="numero_81">Numero 81</string>
    <string name="numero_82">Numero 82</string>
    <string name="numero_83">Numero 83</string>
    <string name="numero_84">Numero 84</string>
    <string name="numero_85">Numero 85</string>
    <string name="numero_86">Numero 86</string>
    <string name="numero_87">Numero 87</string>
    <string name="numero_88">Numero 88</string>
    <string name="numero_89">Numero 89</string>
    <string name="numero_91">Numero 91</string>
    <string name="numero_92">Numero 92</string>
    <string name="numero_93">Numero 93</string>
    <string name="numero_94">Numero 94</string>
    <string name="numero_95">Numero 95</string>
    <string name="numero_96">Numero 96</string>
    <string name="numero_97">Numero 97</string>
    <string name="numero_98">Numero 98</string>
    <string name="numero_99">Numero 99</string>
    <string name="numero_100">Numero 100</string>
</resources>
