<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/menu">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/ib_go_six"
        android:src="@drawable/regreso"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_64"
            android:padding="20dp"
            android:src="@drawable/numero64"
            android:id="@+id/ib_numero_64"
            android:layout_margin="1dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_65"
            android:padding="20dp"
            android:src="@drawable/numero65"
            android:id="@+id/ib_numero_65"
            android:layout_margin="1dp"
            android:layout_marginRight="3dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_66"
            android:padding="20dp"
            android:src="@drawable/numero66"
            android:id="@+id/ib_numero_66"
            android:layout_margin="1dp"
            android:layout_marginRight="10dp"
            />



    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_67"
            android:padding="20dp"
            android:src="@drawable/numero67"
            android:id="@+id/ib_numero_67"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_68"
            android:padding="20dp"
            android:src="@drawable/numero68"
            android:id="@+id/ib_numero_68"
            android:layout_margin="3dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_69"
            android:padding="20dp"
            android:src="@drawable/numero69"
            android:id="@+id/ib_numero_69"
            android:layout_margin="3dp"
            />



    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/numero_70"
            android:padding="20dp"
            android:src="@drawable/numero70"
            android:id="@+id/ib_numero_70"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_71"
            android:padding="20dp"
            android:src="@drawable/numero71"
            android:id="@+id/ib_numero_71"
            android:layout_margin="1dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_72"
            android:padding="20dp"
            android:src="@drawable/numero72"
            android:id="@+id/ib_numero_72"
            android:layout_margin="3dp"
            />



    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_73"
            android:padding="20dp"
            android:src="@drawable/numero73"
            android:id="@+id/ib_numero_73"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_74"
            android:padding="20dp"
            android:src="@drawable/numero74"
            android:id="@+id/ib_numero_74"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_75"
            android:padding="20dp"
            android:src="@drawable/numero75"
            android:id="@+id/ib_numero_75"
            android:layout_margin="3dp"
            />

    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_76"
            android:padding="20dp"
            android:src="@drawable/numero76"
            android:id="@+id/ib_numero_76"
            android:layout_margin="2dp"
            />



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_77"
            android:padding="20dp"
            android:src="@drawable/numero77"
            android:id="@+id/ib_numero_77"
            android:layout_margin="3dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_78"
            android:padding="20dp"
            android:src="@drawable/numero78"
            android:id="@+id/ib_numero_78"
            android:layout_margin="3dp"
            />



    </LinearLayout>



</LinearLayout>