<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/menu">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/ib_go_four"
        android:src="@drawable/regreso"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_34"
            android:padding="20dp"
            android:src="@drawable/numero34"
            android:id="@+id/ib_numero_34"
            android:layout_margin="1dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_35"
            android:padding="20dp"
            android:src="@drawable/numero35"
            android:id="@+id/ib_numero_35"
            android:layout_margin="1dp"
            android:layout_marginRight="3dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_36"
            android:padding="20dp"
            android:src="@drawable/numero36"
            android:id="@+id/ib_numero_36"
            android:layout_margin="1dp"
            android:layout_marginRight="10dp"
            />



    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_37"
            android:padding="20dp"
            android:src="@drawable/numero37"
            android:id="@+id/ib_numero_37"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_38"
            android:padding="20dp"
            android:src="@drawable/numero38"
            android:id="@+id/ib_numero_38"
            android:layout_margin="3dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_39"
            android:padding="20dp"
            android:src="@drawable/numero39"
            android:id="@+id/ib_numero_39"
            android:layout_margin="3dp"
            />



    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:text="@string/numero_40"
            android:padding="20dp"
            android:src="@drawable/numero40"
            android:id="@+id/ib_numero_40"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_41"
            android:padding="20dp"
            android:src="@drawable/numero41"
            android:id="@+id/ib_numero_41"
            android:layout_margin="1dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_42"
            android:padding="20dp"
            android:src="@drawable/numero42"
            android:id="@+id/ib_numero_42"
            android:layout_margin="3dp"
            />



    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_43"
            android:padding="20dp"
            android:src="@drawable/numero43"
            android:id="@+id/ib_numero_43"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_44"
            android:padding="20dp"
            android:src="@drawable/numero44"
            android:id="@+id/ib_numero_44"
            android:layout_margin="2dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_45"
            android:padding="20dp"
            android:src="@drawable/numero45"
            android:id="@+id/ib_numero_45"
            android:layout_margin="3dp"
            />

    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_46"
            android:padding="20dp"
            android:src="@drawable/numero46"
            android:id="@+id/ib_numero_46"
            android:layout_margin="2dp"
            />



        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_47"
            android:padding="20dp"
            android:src="@drawable/numero47"
            android:id="@+id/ib_numero_47"
            android:layout_margin="3dp"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:text="@string/numero_48"
            android:padding="20dp"
            android:src="@drawable/numero48"
            android:id="@+id/ib_numero_48"
            android:layout_margin="3dp"
            />



    </LinearLayout>



</LinearLayout>